# ytauto

./: README.md  config_env.bat  pyproject.toml  restart.bat  run.bat  start_chrome.bat
ytauto/: __init__.py  conftest.py  listener.py  main.py  pytest.ini  test.py
ytauto/config/: nodes.toml  special_elements.toml  sql.toml
ytauto/features/: login_youtube.py
ytauto/testcases/: test_run_script.py
ytauto/utils/: base.py  config_operation.py  socket_handler.py  sql_handler.py  verify.py
